# GFX_Tutorials

./: .gitignore  CMakeLists.txt  GFX_Tutorials.sln  progress.txt
BallGame/: Ball.cpp  Ball.h  BallController.cpp  BallGame.vcxproj  BallGame.vcxproj.filters  BallRenderer.cpp  BallRenderer.h  CMakeLists.txt  MainGame.cpp  MainGame.h
GFX_Tutorials/: Bullet.cpp  Bullet.h  GFX_Tutorials.vcxproj  GFX_Tutorials.vcxproj.filters  Main.cpp  MainGame.cpp  MainGame.h
GFX_Tutorials/Shaders/: colorShading - Copy.frag  colorShading - Copy.vert  colorShading.vert
GameEngineOpenGL/: AudioManager.cpp  AudioManager.h  CMakeLists.txt  Camera2D.cpp  Camera2D.h  DebugRenderer.cpp  DebugRenderer.h  ErrManager.h  Errors.cpp  GLSLProgram.cpp  GLSLProgram.h  GLTexture.h  GUI.cpp  GUI.h  GameEngineOpenGL.cpp  GameEngineOpenGL.h  GameEngineOpenGL.vcxproj  GameEngineOpenGL.vcxproj.filters  IGameScreen.h  IMainGame.cpp  IMainGame.h  IOManager.cpp  IOManager.h  ImageLoader.cpp  ImageLoader.h  InputManager.cpp  InputManager.h  MainGame.cpp  MainGame.h  ParticleBatch2D.cpp  ParticleBatch2D.h  ParticleEngine2D.cpp  ParticleEngine2D.h  PicoPNG.cpp  PicoPNG.h  ReadMe.txt  ResourceManager.cpp  ResourceManager.h  ScreenList.cpp  ScreenList.h  (+14 more)
NinjaPlatformer/: App.cpp  App.h  Box.cpp  Box.h  Capsule.cpp  Capsule.h  EditorScreen.cpp  EditorScreen.h  GameplayScreen.cpp  GameplayScreen.h  Light.h  MainMenuScreen.cpp  MainMenuScreen.h  NinjaPlatformer.vcxproj  Player.cpp  Player.h  ScreenIndices.h  main.cpp
NinjaPlatformer/Shaders/: colorShading.frag  lightShading.frag  lightShading.vert  textureShading.frag
ZombiesGame/: Agent.cpp  Agent.h  Bullet.cpp  Bullet.h  Gun.cpp  Gun.h  Human.cpp  Human.h  Level.cpp  Level.h  Main.cpp  Player.cpp  Player.h  Zombie.cpp  Zombie.h  ZombiesGame.cpp  ZombiesGame.h  ZombiesGame.vcxproj  ZombiesGame.vcxproj.filters
ZombiesGame/Levels/: level_1.txt
